Wrong grid color on light background #34289

Closed
opened 2013-02-17 13:19:21 +01:00 by Sergey Ukolov · 8 comments

%%%Linux x86_64, ATI HD6950
Blender 2.66 RC with "error" and Blender 2.65a worked right

Problem: Setting grid color darker than relatively light background now not so easy and results hard readable wires or too light key grid lines (pic related).

To reproduce: Try to set background color to something lighter than default.%%%

%%%Linux x86_64, ATI HD6950 Blender 2.66 RC with "error" and Blender 2.65a worked right Problem: Setting grid color darker than relatively light background now not so easy and results hard readable wires or too light key grid lines (pic related). To reproduce: Try to set background color to something lighter than default.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%For me things work the same in 2.66RC as in 2.65a.
Just attach your startup,blend from 2.65a here that fails.%%%

%%%For me things work the same in 2.66RC as in 2.65a. Just attach your startup,blend from 2.65a here that fails.%%%

%%%windows 7, nvidia gts 450
blender-2.65a-windows32
blender-2.66-RC-windows32

i can confirm the same problem
to reproduce

load factory settings
press 1 for front view
press 5 for orthographic view
change the theme to ubuntu ambiance
change the units to metric
then zoom in until it reads 10 centimeters

you will notice the grid loses its clarity between metres and centimeters
the grid appears all the same colour, making it harder to read
problem has nothing to do with theme or units
problem exists in all themes,
2.65 looked good, images attached
strangely but when i first start blender-2.66-RC up, the grid appears normal, as it was in 2.65,
problems just appear, when i load factory settings, or reset to default theme and change theme.%%%

%%%windows 7, nvidia gts 450 blender-2.65a-windows32 blender-2.66-RC-windows32 i can confirm the same problem to reproduce load factory settings press 1 for front view press 5 for orthographic view change the theme to ubuntu ambiance change the units to metric then zoom in until it reads 10 centimeters you will notice the grid loses its clarity between metres and centimeters the grid appears all the same colour, making it harder to read problem has nothing to do with theme or units problem exists in all themes, 2.65 looked good, images attached strangely but when i first start blender-2.66-RC up, the grid appears normal, as it was in 2.65, problems just appear, when i load factory settings, or reset to default theme and change theme.%%%
Author

%%%I don't know how i did it, but problem suddenly solved itself. Just manipulated with startup files, moving from one folder to other for test it once more and grid in both 2.65a and 2.66 RC became displayed correctly, so i lost "magic" configs for reproducing bug.
I think bug should be checked as Fixed / Closed, sorry for disturbing.%%%

%%%I don't know how i did it, but problem suddenly solved itself. Just manipulated with startup files, moving from one folder to other for test it once more and grid in both 2.65a and 2.66 RC became displayed correctly, so i lost "magic" configs for reproducing bug. I think bug should be checked as Fixed / Closed, sorry for disturbing.%%%
Author

%%%Disregard that! This is configs that worked fine for my current "3Ds Max" theme with light BG:
http://www.pasteall.org/blend/19563
http://www.pasteall.org/blend/19564 (really file should be named "userpref.blend1", i'm just got pasteall restriction for it's extension)
I got them by saving settings in 2.65a, then opening 2.66 RC and tweaking theme to my needs.

But when i'm remove this config or press "Load Factory Settings" in 2.66 RC i can't set up colors properly again! (got white + strong gray grid lines on light BG as shown in grid-problem.png)%%%

%%%Disregard that! This is configs that worked fine for my current "3Ds Max" theme with light BG: http://www.pasteall.org/blend/19563 http://www.pasteall.org/blend/19564 (really file should be named "userpref.blend1", i'm just got pasteall restriction for it's extension) I got them by saving settings in 2.65a, then opening 2.66 RC and tweaking theme to my needs. But when i'm remove this config or press "Load Factory Settings" in 2.66 RC i can't set up colors properly again! (got white + strong gray grid lines on light BG as shown in grid-problem.png)%%%
Member

%%%This is all still very unclear to me.

Keep in mind that only in 2.66 we have split the user preferences in 2 files (now user settings and themes are in the userpref.blend).
You can read 2.65a startups fine in 2.66, but not read the 2.66 userpref in 2.65a.

I loaded both your files, and go to "Load Factor Settings" and colors just work as usual.%%%

%%%This is all still very unclear to me. Keep in mind that only in 2.66 we have split the user preferences in 2 files (now user settings and themes are in the userpref.blend). You can read 2.65a startups fine in 2.66, but not read the 2.66 userpref in 2.65a. I loaded both your files, and go to "Load Factor Settings" and colors just work as usual.%%%

%%%Issue is fixed in svn rev54628. Thanks for the report, closing.%%%

%%%Issue is fixed in svn rev54628. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34289
No description provided.