Fix #34289: Wrong grid color on light background

Grid was blending with wrong theme color.

Since r53636 TH_HIGH_GRAD is used as a background and this
color shall be used for blending.

This is possible other usages of TH_BACK are wrong here as
well, but would want Antony to check on this.